--- a/css/styles.css
+++ b/css/styles.css
@@ -13,19 +13,26 @@
     }
 }
 
+a {
+    margin: 0;
+    font-family: Gabriola;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
 li {
     border-right: 0px;
   }
   
 #nav{
-    background:#2a506d;
+    background:#ffffff;
     justify-content: center;
 }
   
 #col-green{
-    background: #497f4b;
-	background: -webkit-linear-gradient(to right, #3b3e3e, #497f4b); 
-    background: linear-gradient(to right, #3b3e3e, #497f4b); 
+    background: #ffffff;
+
 }
 #text-big{
     color: white;
@@ -34,3 +41,73 @@ li {
 #text-white{
     color: white;
 }
+
+h1{
+    margin: 0;
+    font-family: Gabriola;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #080808;
+    text-decoration: underline;
+}
+
+p{
+    margin: 0;
+    font-family: Gabriola;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 1.0;
+    color: #080808;
+}
+
+h4{
+    margin: 0;
+    font-family: Edwardian Script ITC;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 1.0;
+    color: #FF3366;
+}
+
+#spans{
+    display: inline-block;
+    color: #FF3366;
+    font-family: Edwardian Script ITC;
+    font-size: 30px;
+} 
+
+#div-row-color{
+    background-color: #DDD3D3;
+}
+
+.footer {
+    margin: 25px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+ }
+
+ #btn01{
+     background-color: #080808;
+     color: #ffffff;
+     font-family: Gabriola;
+     font-size: 25px;
+     border-radius: 10px;
+     width:150px;
+     height:45px;
+     border: 0px;
+ }
+
+@media (min-width: 768px) {
+    .navbar-brand.abs
+        {
+            position: absolute;
+            width: 100%;
+            left: 0;
+            text-align: center;
+        }
+    }
+    
