--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,23 @@ a {
 li {
     border-right: 0px;
   }
+
+#back_black{
+    background-color: #000000;
+    color: #ffffff;
+}
+
+#spacer{
+    padding-top: 50px;
+}
   
 #nav{
     background:#ffffff;
+    justify-content: center;
+}
+
+#secondary_nav{
+    background:#000000;
     justify-content: center;
 }
   
@@ -37,9 +51,6 @@ li {
 #text-big{
     color: white;
     font-size: 120px;
-}
-#text-white{
-    color: white;
 }
 
 h1{
@@ -58,7 +69,6 @@ p{
     font-size: 30px;
     font-weight: 400;
     line-height: 1.0;
-    color: #080808;
 }
 
 h4{
@@ -70,6 +80,14 @@ h4{
     color: #FF3366;
 }
 
+#description{
+    font-family: Matura MT script Capitals; 
+    font-size: 30px;
+    padding: 3%;
+    background-color: #C8C8C8; 
+    color: #000000;
+}
+
 #spans{
     display: inline-block;
     color: #FF3366;
@@ -79,6 +97,12 @@ h4{
 
 #div-row-color{
     background-color: #DDD3D3;
+    color: black;
+}
+
+#title-padding{
+        padding-top: 50px;
+        padding-bottom: 50px;
 }
 
 .footer {
@@ -101,6 +125,41 @@ h4{
      border: 0px;
  }
 
+ #contact{
+     font-family: Petit Formal Script;
+    font-size: 22px;
+    line-height: 30px;
+    font-weight: normal;
+    font-style: normal;
+    text-transform: none;
+    text-decoration: none;
+    color: #3c3834;
+    letter-spacing: 0;
+    padding-top: 10px;
+ }
+ #info-contact{
+    font-family: Josefin Sans;
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: normal;
+    font-style: normal;
+    letter-spacing: 0.05em;
+ }
+ #parrafo{
+    font-family: Arial;
+    font-size: 20px;
+    color: black;
+    text-align: justify;
+ }
+
+.image-center{
+    text-align: center;
+    align-content: center;
+}
+#tabla {
+	border: 1px solid white;
+}
+
 @media (min-width: 768px) {
     .navbar-brand.abs
         {
@@ -109,5 +168,29 @@ h4{
             left: 0;
             text-align: center;
         }
-    }
+        
     
+
+    }
+
+      .loc {
+        display:table;
+        position:relative;
+        margin-bottom:39px;
+    }
+    .faldon {
+        display:table-caption;
+        position:absolute;
+        bottom:0;
+        left:0;
+        display:block;
+        width:100%;
+        padding:9px 0;
+        background:#c8c8c8;
+        color:black;
+        font-family: Matura MT script Capitals; 
+        font-size:22px;
+    }
+    div.centro{
+        margin:0 auto;
+      }
