--- a/floreria/src/app/header/header.component.html
+++ b/floreria/src/app/header/header.component.html
@@ -1,46 +1,6 @@
-<!--
-<header>
-  <nav id="nav" class="navbar navbar-light navbar-expand-md bg-faded justify-content-center fixed-top">
-      <a [routerLink]="['inicio']" class="navbar-brand d-flex w-50 mr-auto">
-          <img src="../../assets/imagenes/miraflor.png" alt="Home" width="150px" height="30px">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
-          <ul class="navbar-nav w-100 justify-content-center">
-              <li class="nav-item active">
-                  <a class="nav-link" [routerLink]="['inicio']">
-                      Inicio<span class="sr-only">(current)</span>
-                  </a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" [routerLink]="['productos']">
-                      Productos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" [routerLink]="['contactos']">
-                      Contáctenos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" [routerLink]="['nosotros']">
-                      Nosotros</a>
-              </li>
-          </ul>
-          <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
-              <li class="nav-item">
-                  <a class="nav-link" [routerLink]="['carrito']">
-                      <img src="../../assets/imagenes/carrito_compras.png" alt="Home" width="25px" height="25px">
-                  </a>
-              </li>
-              
-          </ul>
-      </div>
-  </nav>
-</header>
--->
 
-  <nav class="navbar navbar-expand-lg navbar-light nav-bg">
+
+  <nav class="navbar navbar-expand-lg navbar-light nav-bg" style="padding-left: 2%;padding-right: 2%;">
     <a [routerLink]="['inicio']" >
         <img src="../../assets/imagenes/miraflor.png" alt="Home" width="150px" height="30px">
     </a>
@@ -49,7 +9,7 @@
       </button>
       <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
         <ul class="navbar-nav w-100 justify-content-center" style="width: 100%;">
-            <li class="nav-item">
+            <li class="nav-item" >
                 <a class="nav-link" [routerLink]="['inicio']">
                     Inicio<span class="sr-only"></span>
                 </a>
