--- a/floreria/src/app/factura/factura.component.html
+++ b/floreria/src/app/factura/factura.component.html
@@ -1,4 +1,4 @@
-<main role="main" id="col-green" style="margin-left: 4%;margin-right: 4%;"><br><br>
+<main role="main" id="factura-view" style="margin-left: 4%;margin-right: 4%;"><br><br>
   <h1 style="text-align: left; font-size: 45px; color: #FF3366;">Detalles de facturacion</h1><br><br>
   
   <form>
