--- a/floreria/src/app/header/header.component.html
+++ b/floreria/src/app/header/header.component.html
@@ -29,6 +29,14 @@
         </ul>
         <ul class="nav navbar-nav  justify-content-end">
             <li class="nav-item">
+                <a class="nav-link" [routerLink]="['login']">
+                    <img src="../../assets/imagenes/user.png" alt="Home" width="25px" height="25px">
+                </a>
+            </li>
+            
+        </ul>
+        <ul class="nav navbar-nav  justify-content-end">
+            <li class="nav-item">
                 <a class="nav-link" [routerLink]="['carrito']">
                     <img src="../../assets/imagenes/carrito_compras.png" alt="Home" width="25px" height="25px">
                 </a>
